[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dvb"
dynamic = ["version"]
description = "An unofficial Python module for Dresden's public transport system (VVO/DVB)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "kiliankoe", email = "me@kilian.io" }]
keywords = ["dvb", "vvo", "tram", "bus", "public-transport", "dresden"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["requests>=2.32", "pyproj>=3.7"]

[project.urls]
Homepage = "https://github.com/kiliankoe/dvbpy"
Repository = "https://github.com/kiliankoe/dvbpy"

[dependency-groups]
dev = ["pytest>=8", "responses>=0.25", "mypy>=1.14", "ruff>=0.9", "types-requests>=2.32"]

[tool.hatch.version]
path = "dvb/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
